# Personal-Avatar

./: .gitignore  README.md  avatar.config.example.json  pyproject.toml
docs/: capture_guide.md  first_recording.md  setup_mac.md
scratch/: rewrite_ui.py
src/avatar_clone/: checks.py  cli.py  config.py  prep.py  utils.py  webapp.py
src/avatar_clone/backends/: __init__.py  f5_tts.py  sadtalker.py
